changed css paths on index.html

--- a/index.html
+++ b/index.html
@@ -32,30 +32,24 @@
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">  
      
     <style>
-@import url("http://www.rivet.works/modules/system/system.base.css?nki36q");
-@import url("http://www.rivet.works/modules/system/system.messages.css?nki36q");
-@import url("http://www.rivet.works/modules/system/system.theme.css?nki36q");
-</style>
-<style>
-@import url("http://www.rivet.works/sites/all/modules/date/date_api/date.css?nki36q");
-@import url("http://www.rivet.works/sites/all/modules/date/date_popup/themes/datepicker.1.7.css?nki36q");
-@import url("http://www.rivet.works/sites/all/modules/fences/field.css?nki36q");
-@import url("http://www.rivet.works/modules/node/node.css?nki36q");
-@import url("http://www.rivet.works/modules/user/user.css?nki36q");
-@import url("http://www.rivet.works/sites/all/modules/views/css/views.css?nki36q");
-</style>
-<style>
-@import url("http://www.rivet.works/sites/all/modules/ctools/css/ctools.css?nki36q");
-@import url("http://www.rivet.works/sites/all/modules/panels/css/panels.css?nki36q");
-@import url("http://www.rivet.works/sites/all/modules/webform/css/webform.css?nki36q");
-</style>
-<style>
-@import url("http://www.rivet.works/sites/all/themes/rivet/css/foundation.min.css?nki36q");
-@import url("http://www.rivet.works/sites/all/themes/rivet/css/animate.min.css?nki36q");
-@import url("http://www.rivet.works/sites/all/themes/rivet/css/bigvideo.css?nki36q");
-@import url("http://www.rivet.works/sites/all/themes/rivet/css/slick.css?nki36q");
-@import url("http://www.rivet.works/sites/all/themes/rivet/css/theme.css?nki36q");
-</style>
+    @import "system.base.css?nki36q";
+    @import "system.messages.css?nki36q";
+    @import "system.theme.css?nki36q";
+    @import "date.css?nki36q";
+    @import "datepicker.1.7.css?nki36q";
+    @import "field.css?nki36q";
+    @import "node.css?nki36q";
+    @import "user.css?nki36q";
+    @import "views.css?nki36q";
+    @import "ctools.css?nki36q";
+    @import "panels.css?nki36q";
+    @import "webform.css?nki36q";
+    @import "foundation.min.css?nki36q";
+    @import "animate.min.css?nki36q";
+    @import "bigvideo.css?nki36q";
+    @import "slick.css?nki36q";
+    @import "theme.css?nki36q";
+    </style>
     <link href='//fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
     <!--script type="javascript">
         var htmlClasses=["placeholder"in document.createElement("input")?"placeholder":"no-placeholder","ontouchstart"in document.documentElement?"touch-support":"no-touch-support"];Function("/*@cc_on return document.documentMode===10@*/")()&&htmlClasses.push("lte-ie10");document.documentElement.className+=" "+htmlClasses.join(" ");
