trying to fix css load errors

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">  
      
     <style>
-    @import "system.base.css?nki36q";
+    @import "system.base.css";
     @import "system.messages.css?nki36q";
     @import "system.theme.css?nki36q";
     @import "date.css?nki36q";
@@ -67,7 +67,7 @@
                     <ul class="title-area">
                         <li>
                             <a href="#home">
-                                <img src="http://www.rivet.works/sites/default/files/rivet-logo_0.png" alt="Rivet Works, Inc." />
+                                <img src="/rivet-logo_0.png" alt="Rivet Works, Inc." />
                             </a>
                         </li>
                         <li class="menu-icon"><a href="#"><span></span></a></li>
