updated css file names and names in index

--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
      
     <style>
     @import "system.base.css";
-    @import "system.messages.css?nki36q";
-    @import "system.theme.css?nki36q";
-    @import "date.css?nki36q";
-    @import "datepicker.1.7.css?nki36q";
-    @import "field.css?nki36q";
-    @import "node.css?nki36q";
-    @import "user.css?nki36q";
-    @import "views.css?nki36q";
-    @import "ctools.css?nki36q";
-    @import "panels.css?nki36q";
-    @import "webform.css?nki36q";
-    @import "foundation.min.css?nki36q";
-    @import "animate.min.css?nki36q";
-    @import "bigvideo.css?nki36q";
-    @import "slick.css?nki36q";
-    @import "theme.css?nki36q";
+    @import "system.messages.css";
+    @import "system.theme.css";
+    @import "date.css";
+    @import "datepicker.1.7.css";
+    @import "field.css";
+    @import "node.css";
+    @import "user.css";
+    @import "views.css";
+    @import "ctools.css";
+    @import "panels.css";
+    @import "webform.css";
+    @import "foundation.min.css";
+    @import "animate.min.css";
+    @import "bigvideo.css";
+    @import "slick.css";
+    @import "theme.css";
     </style>
     <link href='//fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
     <!--script type="javascript">
